<resources>
    <string name="app_name" translatable="false">EcoTrace</string>
    <string name="publicInfo">Публичная информация</string>
    <string name="avatar">Аватар</string>
    <string name="newUsername">Новый никнейм</string>
    <string name="country">Страна</string>
    <string name="tellAboutYourself">Расскажите о себе</string>
    <string name="personalInfo">Персональная информация</string>
    <string name="howToCallYou">Как к Вам обращаться?</string>
    <string name="email" translatable="false">Email</string>
    <string name="checkTheEmail">Проверить email</string>
    <string name="applyNewEmail">Применить email</string>
    <string name="currentPassword">Текущий пароль</string>
    <string name="newPassword">Новый пароль</string>
    <string name="applyNewPassword">Применить новый пароль</string>
    <string name="privacySettings">Настройки конфиденциальности</string>
    <string name="yourNameIsSeenTo">Ваше имя видят</string>
    <string name="yourCountryIsSeenTo">Вашу страну видят</string>
    <string name="yourFriendsAreSeenTo">Ваших друзей видят</string>
    <string name="yourGroupsAreSeenTo">Ваши группы видят</string>
    <string name="end">Завершить</string>
    <string name="mainInfo">Основное</string>
    <string name="extraInfo">Подробнее</string>
    <string name="publish">Опубликовать</string>
    <string name="postToTheGroup">Пост в группу</string>
    <string name="image">Изображение</string>
    <string name="writeSomething...">Написать что-нибудь…</string>
    <string name="calculators">Калькуляторы</string>
    <string name="results">Результаты</string>
    <string name="myFriends">Мои друзья</string>
    <string name="noFriendsFound">Не найдено ни одного друга</string>
    <string name="searchForNewFriends">Искать новых друзей</string>
    <string name="username">Никнейм</string>
    <string name="noUsersFoundWithSuchTags">Не найдено ни одного пользователя с такими тегами!</string>
    <string name="share">Поделиться</string>
    <string name="hidden">Скрыто</string>
    <string name="noDescription">Нет описания</string>
    <string name="users_sCarbonFootprint">Углеродные выбросы пользователя</string>
    <string name="contactUserForMoreInfo">Для получения более подробной информации обратитесь к пользователю</string>
    <string name="userHaveNotTakenTestsYet">Пользователь еще проходил экологические тесты!</string>
    <string name="eventsParticipation">Участия в мероприятиях</string>
    <string name="userHaveNotTakenPartInAnyEventYet">Пользователь еще не участовал ни в одном мероприятии</string>
    <string name="membersrp">Участников</string>
    <string name="friends">Друзья</string>
    <string name="userHaveNotMadeFriendsWithAnyoneYetOrHidedThem">Пользователь еще не никого не добавил в друзья или скрыл их</string>
    <string name="groups">Группы</string>
    <string name="userHaveNotJoinedAnyGroupYetOrHidedThem">Пользователь еще не вступил ни в одну группу или скрыл их</string>
    <string name="yourEvents">Ваши мероприятия</string>
    <string name="eventsYouAreIn">Мероприятия, в которых Вы участвуете</string>
    <string name="searchForEvents">Поиск мероприятий</string>
    <string name="sinceNow">С текущего момента</string>
    <string name="tillTheEnd">До конца</string>
    <string name="noEventsFoundWithSuchTags">Не найдено ни одного мероприятия с такими тегами!</string>
    <string name="yourGroups">Ваши группы</string>
    <string name="groupsYouAreIn">Группы, в которых Вы состоите</string>
    <string name="searchForGroups">Поиск групп</string>
    <string name="noGroupsFoundWithSuchTags">Не найдено ни одной группы с такими тегами!</string>
    <string name="check">Проверить</string>
    <string name="map">Карта</string>
    <string name="membersipmn">Участники</string>
    <string name="rules">Правила</string>
    <string name="join">Присоединиться</string>
    <string name="noPostsInThisGroupYet">В этой группе еще никто и ничего не публиковал!</string>
    <string name="creator">Создатель</string>
    <string name="ceoipmn">Руководители</string>
    <string name="noCeosYet">Должность руководителя еще никто не занимает!</string>
    <string name="helperipmn">Помощники</string>
    <string name="noHelpersYet">В этой группе еще нет помощников!</string>
    <string name="noMembersInTheGroup">В этой группе нет обычных участников!</string>
    <string name="leaveAComment">Оставить комментарий…</string>
    <string name="name">Название</string>
    <string name="eventName">Название мероприятия</string>
    <string name="shortDescription">Краткое описание</string>
    <string name="tellAboutYourIdeaShortly">Кратко расскажите о мероприятии</string>
    <string name="tags">Теги</string>
    <string name="eventWillStart">Мероприятие начнется</string>
    <string name="timeActionsPlan">План дейстий по времени</string>
    <string name="planYourEventByMinutes">Распланируйте свое мероприятие по минутам!</string>
    <string name="addTime">Добавить время</string>
    <string name="goalsPlan">Цели мероприятия</string>
    <string name="tellAboutTheGoalsOfYourEvent">Расскажите, каковы цели вашего мероприятия</string>
    <string name="addGoal">Добавить цель</string>
    <string name="dot">Точка</string>
    <string name="circle">Окружность</string>
    <string name="groupName">Название группы</string>
    <string name="aboutYourGroup">О вашей группе</string>
    <string name="removeImage">Удалить изображение</string>
    <string name="tellMoreAboutTheGroup">Рассказать о группе больше…</string>
    <string name="dataThatShouldBeUpdatedDaily">Данные, которые стоит обновлять ежедневно</string>
    <string name="food">Пища</string>
    <string name="water">Вода</string>
    <string name="trash">Отходы</string>
    <string name="energy">Энергия</string>
    <string name="transport">Транспорт</string>
    <string name="openQuestion">Открыть вопрос</string>
    <string name="eventStatus">Статус мероприятия</string>
    <string name="findAMember">Найти участника</string>
    <string name="resultsWillAppearHere">Здесь появятся Ваши результаты!</string>
    <string name="myProfile">Мой профиль</string>
    <string name="yourProfile">Ваш профиль</string>
    <string name="ecologicalCalculator">Экологический калькулятор</string>
    <string name="wannaKnowAboutYourImpactOnTheEnvironment">Хотите узнать о вашем влиянии на окружающую среду?</string>
    <string name="theBestWayToSeeYourFriendsAndFindNewOnes">Отличный способ быстро посмотреть список своих друзей и найти новых!</string>
    <string name="events">Мероприятия</string>
    <string name="findASuitableEventForYouOrCreateANewOne">Найдите подходящее для себя мероприятие или создайте новое!</string>
    <string name="joinAGroupOrCreateYourOwn">Вступите в группу или создайте свою!</string>
    <string name="hello">Здравствуйте, </string>
    <string name="duringYourAbsence">Пока Вас не было…</string>
    <string name="started">началось</string>
    <string name="ended">закончилось</string>
    <string name="nothingHappened">ничего не случилось!</string>
    <string name="education">Обучение</string>
    <string name="youHavePassedAllTheEducations">Вы прошли все доступные обучающие тесты! Так держать!</string>
    <string name="youHaveNotPassedAllEducationsSeeOnEducationPage">Вы прошли не все обучающие тесты! Посмотрите на странице "Обучение"!</string>
    <string name="news">Новости</string>
    <string name="username_email">Никнейм/почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="nooAccountYet">Нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="noSpecify">Не указывать пол</string>
    <string name="haveAnAccount">Есть аккаунт?</string>
    <string name="dataFillNecessarily">* - заполнение данных обязательно</string>
    <string name="goToControlWork">Перейти к контрольному тесту</string>
    <string name="attachAnotherImage">Прикрепить другое изображение</string>
    <string name="specifyDataWhileTakingTestsSoDataWillAppearHere">Уточняйте данные, во время прохождения тестов, чтобы здесь появились данные!</string>
    <string name="goal">Цель</string>
    <string name="description">Описание</string>
    <string name="setTheTime">Установить время</string>
    <string name="youHaveEnteredWrongCode">Вы ввели неверный код!</string>
    <string name="enterTheName_notNecessarily">Введите название (необязательно)</string>
    <string name="radius_2dot">Радиус:</string>
    <string name="fillColor">Цвет заливки</string>
    <string name="strokeColor">Цвет границы</string>
    <string name="linkToTheTime">Связать со временем</string>
    <string name="move">Перемещать</string>
    <string name="delete">Удалить</string>
    <string name="makeAHelper">Сделать помощником</string>
    <string name="makeAMember">Сделать участником</string>
    <string name="makeACeo">Сделать руководителем</string>
    <string name="kick">Выгнать</string>
    <string name="memberiped">участник</string>
    <string name="open">Посмотреть</string>
    <string name="chooseOptions">Выберите элементы</string>
    <string name="endTheTest">Закончить прохождение теста</string>
    <string name="youWillLoseAllTheProgress">Вы потеряете весь достигнутый прогресс</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="closeQuestion">Закрыть вопрос</string>
    <string name="unfortunatelyItIsWrongAnswer">К сожалению, это неверный ответ!</string>
    <string name="youHaveNotTakenAllTheTests">Вы не прошли все тесты!</string>
    <string name="dataWasNotGiven">Данные не были переданы!</string>
    <string name="dataAddition"> (добавление данных)</string>
    <string name="youAreUpdatingYourDataOnlyNewChanges">Вы обновляете свои данные! Указывайте только новополученные изменения!</string>
    <string name="youHaveNotAnsweredAllQuestion">Вы ответили не на все вопросы!</string>
    <string name="dataUpdate">Обновление данных</string>
    <string name="makeSureYouHaveUpdatedYouDataByAddingOnlyNewChanges">Убедитесть, что в этот раз вы только добавляли новые данные, без учета предыдущих сегодняшнего дня!</string>
    <string name="dayiped">день</string>
    <string name="dayrped">дня</string>
    <string name="dayrpgetmn">дней</string>
    <string name="plan">Планирование</string>
    <string name="step">Шаг</string>
    <string name="enterYouEventName">Пожалуйста, введите название своего мероприятия!</string>
    <string name="addAtLeastOneTimeAction">Вы должны добавить хотя бы одно временное событие!</string>
    <string name="noRulesInThisGroupYet">В нашей группе еще нет четко установленных правил, но это не значит, что можно действовать безраздумно! Мы призываем всех соблюдать уважение и взаимопонимание в общении!\n\nПеред тем как публиковать сообщения, подумайте о последствиях и о том, как ваши слова могут повлиять на других. Давайте сделаем наше пространство комфортным и безопасным для всех!</string>
    <string name="rating">Рейтинг</string>
    <string name="more">Ещё</string>
    <string name="everyone">Все</string>
    <string name="friendsOnly">Только друзья</string>
    <string name="noOne">Никто</string>
    <string-array name="whoCanSeeFullname">
        <item>@string/everyone</item>
        <item>@string/friendsOnly</item>
        <item>@string/noOne</item>
    </string-array>
    <string name="opened">Открытая</string>
    <string name="private_group">Закрытая</string>
    <string-array name="groupType">
        <item>@string/opened</item>
        <item>@string/private_group</item>
    </string-array>
    <string name="by7days">За 7 дней</string>
    <string name="by30days">За 30 дней</string>
</resources>