<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/dirt2_white"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/closeMenu"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            app:srcCompat="@drawable/baseline_cancel_24" />

        <EditText
            android:id="@+id/mapObjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:ems="10"
            android:gravity="center"
            android:textColor="@color/ok_green"
            android:hint="@string/enterTheName_notNecessarily"
            android:inputType="text" />

        <LinearLayout
            android:id="@+id/layoutradius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/setObjectRadius"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:progress="100"
                android:min="10"
                android:progressTint="@color/ok_green"
                android:thumbTint="@color/ok_green"
                android:secondaryProgressTint="@color/black"
                android:max="1000" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ok_green"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/radius_2dot" />

            <TextView
                android:id="@+id/circleRadiusValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/ok_green"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutcolor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView45"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:paddingEnd="5dp"
                android:text="@string/fillColor"
                android:textColor="@color/ok_green"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/chooseFillColor"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:foreground="@drawable/square"
                android:background="@color/red_no" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:paddingEnd="5dp"
                android:text="@string/strokeColor"
                android:textColor="@color/ok_green"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/chooseStrokeColor"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:foreground="@drawable/square"
                android:background="@color/ok_green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/linkToTheTime" />

            <Spinner
                android:id="@+id/connectWithTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:backgroundTint="@color/ok_green" />
        </LinearLayout>

        <Button
            android:id="@+id/setMoveObject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ok_green"
            android:textColor="@color/dirt_white"
            android:text="@string/move" />

        <Button
            android:id="@+id/deleteObject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_no"
            android:textColor="@color/dirt_white"
            android:text="@string/delete" />


    </LinearLayout>

</FrameLayout>