<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textOften"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/dataThatShouldBeUpdatedDaily"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textOften"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/foodEcoCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:drawableLeft="@drawable/baseline_fastfood_24"
            android:drawableTint="@color/ok_green"
            android:text="@string/food"
            
            android:textColor="@color/ok_green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_marginVertical="@dimen/default_PaddingMargin"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/waterEcoCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:drawableLeft="@drawable/baseline_water_drop_24"
            android:drawableTint="@color/ok_green"
            android:text="@string/water"
            
            android:textColor="@color/ok_green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_marginVertical="@dimen/default_PaddingMargin"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/trashEcoCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:drawableLeft="@drawable/baseline_compost_24"
            android:drawableTint="@color/ok_green"
            android:text="@string/trash"
            
            android:textColor="@color/ok_green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_marginVertical="@dimen/default_PaddingMargin"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/energyEcoCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:drawableLeft="@drawable/baseline_energy_savings_leaf_24"
            android:drawableTint="@color/ok_green"
            android:text="@string/energy"
            
            android:textColor="@color/ok_green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_marginVertical="@dimen/default_PaddingMargin"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/transportationEcoCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:drawableLeft="@drawable/baseline_directions_car_24"
            android:drawableTint="@color/ok_green"
            android:text="@string/transport"
            
            android:textColor="@color/ok_green"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/default_PaddingMargin"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>